<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_ai"
        android:icon="@drawable/ic_search_black"
        android:title="@string/consultas_ia" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat_ia" />

    <item
        android:id="@+id/nav_admin_panel"
        android:icon="@drawable/ic_panel_admin2"
        android:title="@string/panel_admin"
        android:visible="false" />

    <item
        android:id="@+id/nav_parts"
        android:icon="@drawable/ic_np"
        android:title="@string/n_meros_de_parte" />

    <item
        android:id="@+id/nav_manuals"
        android:icon="@drawable/ic_manual"
        android:title="@string/manuales" />

    <item
        android:id="@+id/nav_frequencies"
        android:title="@string/frecuencias"
        android:icon="@drawable/ic_radiofreq" />

    <item
        android:id="@+id/nav_generalities"
        android:icon="@drawable/ic_generalities"
        android:title="@string/generalidades" />

    <item
        android:id="@+id/nav_inspections"
        android:icon="@drawable/ic_inspection"
        android:title="@string/inspecciones" />

    <item
        android:id="@+id/nav_preflight"
        android:icon="@drawable/ic_preflight"
        android:title="@string/inspecci_n_pre_vuelo" />

    <item
        android:id="@+id/nav_en_ruta"
        android:icon="@drawable/ic_ruta"
        android:title="@string/en_ruta" />

    <item
        android:id="@+id/nav_switch_pkg"
        android:icon="@drawable/ic_change"
        android:title="@string/cambiar_paquete_de_manuales" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/cerrar_sesi_n"
        app:showAsAction="never" />
</menu>
