<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Logo -->
    <ImageView
        android:src="@drawable/uh60_header"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="24dp" />

    <TextView
        android:text="@string/acceso_de_t_cnicos_uh_60l"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/iniciar_sesi_n"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvGoRegister"
        android:text="@string/crear_cuenta_nueva"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
